--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
         <dependency>
             <groupId>org.apache.ivy</groupId>
             <artifactId>ivy</artifactId>
-            <version>2.2.0-rc1</version>
+            <version>2.2.0</version>
         </dependency>
     </dependencies>
 
