--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
 
     <properties>
         <ivy.version>2.2.0</ivy.version>
-        <xtrigger.lib.version>0.3-SNAPSHOT</xtrigger.lib.version>
+        <xtrigger.lib.version>0.3</xtrigger.lib.version>
     </properties>
 
     <dependencies>
