--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <artifactId>ivytrigger</artifactId>
     <packaging>hpi</packaging>
     <name>Jenkins IvyTrigger Plug-in</name>
-    <version>0.21</version>
+    <version>0.22-SNAPSHOT</version>
     <url>http://wiki.jenkins-ci.org/display/JENKINS/IvyTrigger+Plugin</url>
 
     <licenses>
