Add jenkins repo

--- a/pom.xml
+++ b/pom.xml
@@ -105,5 +105,19 @@
         <developerConnection>scm:git:git://github.com/jenkinsci/ivytrigger-plugin.git</developerConnection>
     </scm>
 
+    <repositories>
+        <repository>
+            <id>repo.jenkins-ci.org</id>
+            <url>http://repo.jenkins-ci.org/public/</url>
+        </repository>
+    </repositories>
+
+    <pluginRepositories>
+        <pluginRepository>
+            <id>repo.jenkins-ci.org</id>
+            <url>http://repo.jenkins-ci.org/public/</url>
+        </pluginRepository>
+    </pluginRepositories>
+
 </project>
 
