--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <artifactId>ivytrigger</artifactId>
     <packaging>hpi</packaging>
     <name>Jenkins IvyTrigger Plug-in</name>
-    <version>0.33-SNAPSHOT</version>
+    <version>0.33</version>
     <url>http://wiki.jenkins-ci.org/display/JENKINS/IvyTrigger+Plugin</url>
 
     <licenses>
@@ -105,7 +105,8 @@
     <scm>
         <connection>scm:git:git://github.com/jenkinsci/ivytrigger-plugin.git</connection>
         <developerConnection>scm:git:git://github.com/jenkinsci/ivytrigger-plugin.git</developerConnection>
-    </scm>
+      <tag>ivytrigger-0.33</tag>
+  </scm>
 
     <repositories>
         <repository>
