--- a/pom.xml
+++ b/pom.xml
@@ -103,8 +103,8 @@
     </build>
 
     <scm>
-        <connection>scm:git:git://github.com/jenkinsci/ivytrigger-plugin.git</connection>
-        <developerConnection>scm:git:git://github.com/jenkinsci/ivytrigger-plugin.git</developerConnection>
+        <connection>scm:git:https://github.com/jenkinsci/ivytrigger-plugin.git</connection>
+        <developerConnection>scm:git:https://github.com/jenkinsci/ivytrigger-plugin.git</developerConnection>
     </scm>
 
     <repositories>
