--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <artifactId>ivytrigger</artifactId>
     <packaging>hpi</packaging>
     <name>Jenkins IvyTrigger Plug-in</name>
-    <version>0.34</version>
+    <version>0.35-SNAPSHOT</version>
     <url>http://wiki.jenkins-ci.org/display/JENKINS/IvyTrigger+Plugin</url>
 
     <licenses>
@@ -105,7 +105,7 @@
     <scm>
         <connection>scm:git:https://github.com/jenkinsci/ivytrigger-plugin.git</connection>
         <developerConnection>scm:git:https://github.com/jenkinsci/ivytrigger-plugin.git</developerConnection>
-      <tag>ivytrigger-0.34</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <repositories>
