--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.jenkins-ci.plugins</groupId>
         <artifactId>plugin</artifactId>
-        <version>1.424</version>
+        <version>2.37</version>
     </parent>
 
     <artifactId>ivytrigger</artifactId>
@@ -31,9 +31,9 @@
     </developers>
 
     <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.6</maven.compiler.source>
-        <maven.compiler.target>1.6</maven.compiler.target>
+        <java.level>7</java.level>
+        <jenkins.version>1.625.3</jenkins.version>
+        <findbugs.failOnError>false</findbugs.failOnError>
         <ivy.version>2.3.0</ivy.version>
         <xtrigger.lib.version>0.31</xtrigger.lib.version>
         <mockito.version>1.10.19</mockito.version>
