--- a/pom.xml
+++ b/pom.xml
@@ -113,10 +113,11 @@
     </build>
 
     <scm>
-        <connection>scm:git:https://github.com/jenkinsci/ivytrigger-plugin.git</connection>
-        <developerConnection>scm:git:https://github.com/jenkinsci/ivytrigger-plugin.git</developerConnection>
-      <tag>HEAD</tag>
-  </scm>
+        <connection>scm:git:git://github.com/jenkinsci/${project.artifactId}-plugin.git</connection>
+        <developerConnection>scm:git:git@github.com:jenkinsci/${project.artifactId}-plugin.git</developerConnection>
+        <url>https://github.com/jenkinsci/${project.artifactId}-plugin</url>
+        <tag>HEAD</tag>
+    </scm>
 
     <repositories>
         <repository>
