--- a/pom.xml
+++ b/pom.xml
@@ -35,9 +35,19 @@
         <maven.compiler.target>1.6</maven.compiler.target>
         <ivy.version>2.3.0</ivy.version>
         <xtrigger.lib.version>0.31</xtrigger.lib.version>
-        <mockito.version>1.9.0</mockito.version>
-        <powermock.version>1.4.12</powermock.version>
+        <mockito.version>1.10.19</mockito.version>
+        <powermock.version>1.6.6</powermock.version>
     </properties>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.objenesis</groupId>
+                <artifactId>objenesis</artifactId>
+                <version>2.4</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <dependencies>
 
