--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <packaging>hpi</packaging>
     <name>Jenkins IvyTrigger Plug-in</name>
     <version>0.36-SNAPSHOT</version>
-    <url>http://wiki.jenkins-ci.org/display/JENKINS/IvyTrigger+Plugin</url>
+    <url>https://wiki.jenkins-ci.org/display/JENKINS/IvyTrigger+Plugin</url>
 
     <licenses>
         <license>
