--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <artifactId>ivytrigger</artifactId>
     <packaging>hpi</packaging>
     <name>Jenkins IvyTrigger Plug-in</name>
-    <version>0.36-SNAPSHOT</version>
+    <version>${revision}${changelist}</version>
     <url>https://wiki.jenkins-ci.org/display/JENKINS/IvyTrigger+Plugin</url>
 
     <licenses>
@@ -31,6 +31,8 @@
     </developers>
 
     <properties>
+        <revision>0.36</revision>
+        <changelist>-SNAPSHOT</changelist>
         <java.level>8</java.level>
         <jenkins.version>2.60.3</jenkins.version>
         <findbugs.failOnError>false</findbugs.failOnError>
@@ -86,7 +88,7 @@
         <connection>scm:git:git://github.com/jenkinsci/${project.artifactId}-plugin.git</connection>
         <developerConnection>scm:git:git@github.com:jenkinsci/${project.artifactId}-plugin.git</developerConnection>
         <url>https://github.com/jenkinsci/${project.artifactId}-plugin</url>
-        <tag>HEAD</tag>
+        <tag>${scmTag}</tag>
     </scm>
 
     <repositories>
