--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>ivytrigger</artifactId>
     <packaging>hpi</packaging>
     <name>Jenkins IvyTrigger Plug-in</name>
-    <version>1.02</version>
+    <version>${revision}${changelist}</version>
     <url>https://github.com/jenkinsci/${project.artifactId}-plugin</url>
 
     <licenses>
@@ -33,7 +33,7 @@
     </developers>
 
     <properties>
-        <revision>1.02</revision>
+        <revision>1.03</revision>
         <changelist>-SNAPSHOT</changelist>
         <jenkins.version>2.319.1</jenkins.version>
         <gitHubRepo>jenkinsci/${project.artifactId}-plugin</gitHubRepo>
@@ -85,7 +85,7 @@
         <connection>scm:git:https://github.com/${gitHubRepo}.git</connection>
         <developerConnection>scm:git:git@github.com:${gitHubRepo}.git</developerConnection>
         <url>https://github.com/${gitHubRepo}</url>
-        <tag>ivytrigger-1.02</tag>
+        <tag>ivytrigger-1.00</tag>
     </scm>
 
     <repositories>
