--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,9 @@
     <properties>
         <revision>1.03</revision>
         <changelist>-SNAPSHOT</changelist>
-        <jenkins.version>2.319.1</jenkins.version>
+        <!-- https://www.jenkins.io/doc/developer/plugin-development/choosing-jenkins-baseline/ -->
+        <jenkins.baseline>2.319</jenkins.baseline>
+        <jenkins.version>${jenkins.baseline}.1</jenkins.version>
         <gitHubRepo>jenkinsci/${project.artifactId}-plugin</gitHubRepo>
         <ivy.version>2.5.2</ivy.version>
         <xtrigger.api.version>0.4</xtrigger.api.version>
@@ -45,7 +47,7 @@
         <dependencies>
             <dependency>
                 <groupId>io.jenkins.tools.bom</groupId>
-                <artifactId>bom-2.319.x</artifactId>
+                <artifactId>bom-${jenkins.baseline}.x</artifactId>
                 <version>1654.vcb_69d035fa_20</version>
                 <scope>import</scope>
                 <type>pom</type>
