--- a/pom.xml
+++ b/pom.xml
@@ -25,10 +25,9 @@
 
     <developers>
         <developer>
-            <id>gbois</id>
-            <name>Gregory Boissinot</name>
-            <email>gregory.boissinot@gmail.com</email>
-            <timezone>+1</timezone>
+            <id>TonyNoble</id>
+            <name>Tony Noble</name>
+            <timezone>+0</timezone>
         </developer>
     </developers>
 
