--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>ivytrigger</artifactId>
     <packaging>hpi</packaging>
     <name>Jenkins IvyTrigger Plug-in</name>
-    <version>1.04</version>
+    <version>${revision}${changelist}</version>
     <url>https://github.com/jenkinsci/${project.artifactId}-plugin</url>
 
     <licenses>
@@ -32,7 +32,7 @@
     </developers>
 
     <properties>
-        <revision>1.04</revision>
+        <revision>1.05</revision>
         <changelist>-SNAPSHOT</changelist>
         <!-- https://www.jenkins.io/doc/developer/plugin-development/choosing-jenkins-baseline/ -->
         <jenkins.baseline>2.479</jenkins.baseline>
@@ -80,7 +80,7 @@
         <connection>scm:git:https://github.com/${gitHubRepo}.git</connection>
         <developerConnection>scm:git:git@github.com:${gitHubRepo}.git</developerConnection>
         <url>https://github.com/${gitHubRepo}</url>
-        <tag>ivytrigger-1.04</tag>
+        <tag>ivytrigger-1.00</tag>
     </scm>
 
     <repositories>
